--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
         <url>git://github.com/textmagic/textmagic-rest-java.git</url>
     </scm>
 
+         
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
     <licenses>
         <license>
             <name>MIT License</name>
